# video_membership

./: .gitignore  package-lock.json  pyproject.toml  requirements.txt
src/membership/: main.py
src/membership/api/: router.py
src/membership/api/handlers/: auth.py  home.py  video.py
src/membership/core/: config.py  db.py  path.py  template.py
src/membership/exceptions/: auth.py  token.py  user.py  video.py
src/membership/exceptions/handler/: auth.py
src/membership/middleware/: auth.py
src/membership/models/: user.py  video.py
src/membership/schemas/: token.py  user.py
src/membership/utils/: extract.py  jwt.py  password.py
static/css/: output.css
static/js/: auth.js
templates/: base.html  home.html  login.html  signup.html  video.html  video_upload.html
templates/components/: email.html  errors.html
tests/: test_user.py  test_video.py
